--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 <center>
 <p>
-<span class="name">jakub jedelsky</span></strong>
- lives near <a href="https://www.google.cz/maps/place/Brno/@49.2020701,16.5779606,11z/data=!3m1!4b1!4m2!3m1!1s0x4712943ac03f5111:0x400af0f6614b1b0">Brno</a>
- // works as <strike>dev</strike>ops guy in <abbr title="Relational Online Analytical Processing">rolap</abbr> team @ <a href="http://www.gooddata.com">gooddata</a> [<a href="http://www.linkedin.com/in/jedelsky">linkedin</a>]
- // writes on <a href="https://twitter.com/kubiis">twitter</a> &amp; own <a href="http://stderr.cz">blog</a>
- // posts source codes to <a href="http://www.github.com/jakubjedelsky">github</a>
+<span class="name" title="i'm using nicks: kubiis, kubo or stderr">jakub jedelsky</span></strong>
+ lives near <a href="https://www.google.cz/maps/place/Brno/@49.2020701,16.5779606,11z/data=!3m1!4b1!4m2!3m1!1s0x4712943ac03f5111:0x400af0f6614b1b0" title="also known as krno">brno</a>
+ // works as <strike>dev</strike>ops guy in <abbr title="Relational Online Analytical Processing">rolap</abbr> team @ <a href="http://www.gooddata.com" title="best big data company ever">gooddata</a> [<a href="http://www.linkedin.com/in/jedelsky" title="meet my cv">linkedin</a>]
+ // writes on <a href="https://twitter.com/kubiis" title="tweet, tweet!">twitter</a> &amp; own <a href="http://stderr.cz" title="longer tweets in czech">blog</a>
+ // posts source codes to <a href="http://www.github.com/jakubjedelsky" title="share it if you can">github</a>
  // plays guitar</p></center>
 </body>
 </html>
