--- a/en.html
+++ b/en.html
@@ -2,6 +2,19 @@
 <head>
 	<title>about</title>
 	<meta http-equiv="refresh" content="0;url=/">
+
+	<!-- some google spying tools, ignore it -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-35930766-1', 'jakubjedelsky.cz');
+	  ga('send', 'pageview');
+
+	</script>
+	<!-- end of google spying tools -->
 </head>
 <body>
 </body>
