--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 		a:link,a:visited { color: black; }
 		a:hover { text-decoration: none; }
 	</style>
+
+	<!-- some google spying tools, ignore it -->
+	<meta name="google-site-verification" content="n0A84B8JCMcUC8jwR0YAMxKFo0n20aiJY_tbYvtZyTI" />
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-35930766-1', 'jakubjedelsky.cz');
+	  ga('send', 'pageview');
+
+	</script>
+	<!-- end of google spying tools -->
 </head>
 <body>
 <center>
