Add gpg fingerprint

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		p .name { background: black; color: white; padding: 1px 4px; font-weight: bold;}
 		a:link,a:visited { color: black; }
 		a:hover { text-decoration: none; }
+		pre { color: #D3D3D3; }
 	</style>
 
 	<!-- some google spying tools, ignore it -->
@@ -32,5 +33,10 @@
  // writes <a href="https://twitter.com/kubiis" title="tweet, tweet!">tweets</a> &amp; <a href="http://stderr.cz" title="longer tweets in czech">blog</a> posts
  // posts source codes to <a href="http://www.github.com/jakubjedelsky" title="share it if you can">github</a>
  // plays guitar</p></center>
+<center>
+<pre>
+D371 BF07 945F ABA1 55F7  C110 4208 05BF 4511 61B1
+</pre>
+</center>
 </body>
 </html>
