Add avatar (linked from Twitter)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 		a:link,a:visited { color: black; }
 		a:hover { text-decoration: none; }
 		pre { color: #D3D3D3; }
+		#avatar {
+			width: 120px; height: 120px;
+			background: url("https://pbs.twimg.com/profile_images/548966602729717761/iQlKsvIq.jpeg");
+			border-radius: 50%; background-size: 120px 120px;
+			background-color: #000;
+		}
 	</style>
 
 	<!-- some google spying tools, ignore it -->
@@ -26,6 +32,7 @@
 </head>
 <body>
 <center>
+<div id="avatar"></div>
 <p>
 <span class="name" title="i'm using nicks: kubiis, kubo or stderr">jakub jedelsky</span></strong>
  lives near <a href="https://www.google.cz/maps/place/Brno/@49.2020701,16.5779606,11z/data=!3m1!4b1!4m2!3m1!1s0x4712943ac03f5111:0x400af0f6614b1b0" title="also known as krno">brno</a>
