--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>about</title>
+	<title>Yet another personal page</title>
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<style>
 		body { font-family: 'PT Sans', sans-serif; padding-top: 20px;}
