--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			background: url("https://pbs.twimg.com/profile_images/548966602729717761/iQlKsvIq.jpeg");
 			border-radius: 50%; background-size: 120px 120px;
 			background-color: #000;
+			box-shadow: 0 0  5px #888;
 		}
 	</style>
 
