Use https instead of http.
Since the website is forwarded with CloudFlare, I'm able to use https.
ULet's use it!

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <html>
 <head>
+	<script type="text/javascript">
+		var host = "jakubjedelsky.cz";
+		if ((host == window.location.host) && (window.location.protocol != "https:"))
+			window.location.protocol = "https";
+	</script>
+
+
 	<title>Yet another personal page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="canonical" href="https://jakubjedelsky.cz">
+
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<style>
 		body { font-family: 'PT Sans', sans-serif; padding-top: 20px;}
