--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="canonical" href="https://jakubjedelsky.cz">
 
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<style>
 		body { font-family: 'PT Sans', sans-serif; padding-top: 20px;}
 		p .name { background: black; color: white; padding: 1px 4px; font-weight: bold;}
